--- a/employers.html
+++ b/employers.html
@@ -26,13 +26,13 @@
 		    <a href="#!" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 		    <ul class="right hide-on-med-and-down">
 					<li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
-		      <li><a href="#download-app" class="waves-effect waves-yellow btn">Download</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Employers</a></li>
+		      <li><a href="#download-app" class="waves-effect waves-yellow btn">About Us</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn">For Jobseeker</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
   		    <li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
-		      <li><a href="#download-app" class="waves-effect waves-yellow btn">Download</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Employers</a></li>
+		      <li><a href="#download-app" class="waves-effect waves-yellow btn">About Us</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn">For Jobseeker</a></li>
 		    </ul>
 		  </div>
 		</nav> <!-- End nav -->
@@ -40,10 +40,10 @@
   	<section class="employers-block parallax" data-speed="0.4">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
         <div class="center">
-            <h2>Lorem ipsum dolor sit amet, consectetur elit</h2>
-            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit. sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
-            <form action="#!">
-              <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
+          <h2>Lorem ipsum dolor sit amet, consectetur elit</h2>
+          <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit. sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+          <form action="#!">
+            <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
           </form>
         </div>
       </div>
@@ -142,39 +142,51 @@
   			<div class="row center">
           <h2 class="title">What we provide</h2>
   				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="fa fa-money fa-5x"></i>
-  					<h2>First Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+  					<div class="text-wrap">
+              <i class="fa fa-money fa-5x"></i>
+              <h2>First Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+            </div>
   				</div>
 
   				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="fa fa-play-circle-o fa-5x"></i>
-  					<h2>Second Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+  					<div class="text-wrap">
+              <i class="fa fa-play-circle-o fa-5x"></i>
+              <h2>Second Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+            </div>
   				</div>
 
   				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-  					<i class="fa fa-eye fa-5x"></i>
-  					<h2>Third Feature</h2>
-  					<p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+  					<div class="text-wrap">
+              <i class="fa fa-eye fa-5x"></i>
+              <h2>Third Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+            </div>
   				</div>
 
           <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="fa fa-clock-o fa-5x"></i>
-            <h2>Four Feature</h2>
-            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+            <div class="text-wrap">
+              <i class="fa fa-clock-o fa-5x"></i>
+              <h2>Four Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+            </div>
           </div>
 
           <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="fa fa-road fa-5x"></i>
-            <h2>Five Feature</h2>
-            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+           <div class="text-wrap">
+              <i class="fa fa-road fa-5x"></i>
+             <h2>Five Feature</h2>
+             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+           </div>
           </div>
 
           <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
-            <i class="fa fa-umbrella fa-5x"></i>
-            <h2>Six Feature</h2>
-            <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+           <div class="text-wrap">
+              <i class="fa fa-umbrella fa-5x"></i>
+             <h2>Six Feature</h2>
+             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+           </div>
           </div>
   			</div> <!-- End row -->
   	 </div> <!-- End container -->
@@ -230,6 +242,9 @@
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
+                    <form action="#!">
+                      <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
+                    </form>
                   </div>
                 </div>
               </div>
@@ -239,6 +254,9 @@
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
+                    <form action="#!">
+                      <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
+                    </form>
                   </div>
                 </div>
               </div>
@@ -248,6 +266,9 @@
                   <div class="text-wrap">
                     <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</h5>
                     <p>- Jenny McLane, Microsoft</p>
+                    <form action="#!">
+                      <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
+                    </form>
                   </div>
                 </div>
               </div>
