change in h1 font-size

--- a/employers.html
+++ b/employers.html
@@ -34,7 +34,7 @@
 		      <li><a href="#download-app" class="waves-effect waves-yellow btn">About Us</a></li>
 		      <li><a href="#!" class="waves-effect waves-yellow btn">For Jobseeker</a></li>
 		    </ul>
-		  </div>
+		  </div> <!-- End Nav Wrapper -->
 		</nav> <!-- End nav -->
 
   	<section class="employers-block parallax" data-speed="0.4">
@@ -46,12 +46,12 @@
             <button class="btn waves-effect waves-yellow submit myAnimation slideInLeft" data-wow-duration="2s" type="submit" name="action">Login</button>
           </form>
         </div>
-      </div>
+      </div> <!-- End container -->
   	</section> <!-- End Intro Block -->
 
     <section class="recruters-block">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
-        <h2 class="center">Recruiters Using Hiup</h2>
+        <h1 class="title center">Recruiters Using Hiup</h1>
         <div id="recruters" class="owl-carousel">
           <div class="item">
             <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
@@ -134,13 +134,13 @@
             <p class="country">Country</p>
           </div>
         </div>
-      </div>
-     </section> <!-- End My Carousel -->
+      </div> <!-- End container -->
+    </section> <!-- End Recruters block -->
 
   	<section class="info-block myAnimation fadeInUp" data-wow-duration="2s">
   		<div class="container">
   			<div class="row center">
-          <h2 class="title">What we provide</h2>
+          <h1 class="title">What we provide</h1>
   				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
   					<div class="text-wrap">
               <i class="fa fa-money fa-5x"></i>
@@ -195,32 +195,37 @@
     <section class="work-block myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
         <div class="row center">
-          <h2 class="title">How we're different</h2>
+          <h1 class="title">How we're different</h1>
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
+
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>THE JOB GETS DONE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
+
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
+
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
+
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>THE JOB GETS DONE</h2>
             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
           </div>
+
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="fa fa-money fa-5x"></i>
             <h2>CHOOSE</h2>
@@ -230,9 +235,9 @@
       </div> <!-- End container -->
     </section> <!-- End Work Block -->
 
-    <section class="testimonials myAnimation fadeInUp" data-wow-duration="2s">
+    <section class="testimonials-block myAnimation fadeInUp" data-wow-duration="2s">
       <div class="container">
-        <h2 class="center">What Our Clients Says</h2>
+        <h1 class="title center">What Our Clients Says</h1>
         <div class="row">
           <div class="col s12 m8 offset-m2 myAnimation fadeInUp" data-wow-duration="2s">
             <div id="testimonials-carousel">
@@ -248,6 +253,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="item">
                 <div class="testimonials-holder">
                   <img alt="" src="images/avatar-img02.png">
@@ -260,6 +266,7 @@
                   </div>
                 </div>
               </div>
+
               <div class="item">
                 <div class="testimonials-holder">
                   <img alt="" src="images/avatar-img03.png">
@@ -272,11 +279,11 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> <!-- End testimonials carousel -->
           </div>
         </div>
-      </div>
-     </section> <!-- End My Carousel -->
+      </div> <!-- End container -->
+    </section> <!-- End Testimonials -->
 
     <footer id="footer">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
@@ -314,12 +321,13 @@
             </form>
          </div>
         </div>
-      </div>
+      </div> <!-- End conttainer -->
+
       <div class="footer-bottom">
         <div class="container myAnimation fadeInUp" data-wow-duration="2s">
-          <p class="center"> Copyright &copy; 2016 By Olive Media</p>
+          <p class="center">Copyright &copy; 2016 By Olive Media</p>
         </div>
-      </div>
+      </div> <!-- End Footer Bottom -->
     </footer> <!-- End Footer -->
   </div> <!-- End Wrapper -->
 
