--- a/employers.html
+++ b/employers.html
@@ -141,7 +141,7 @@
   		<div class="container">
   			<div class="row center">
           <h1 class="title">What we provide</h1>
-  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
               <i class="fa fa-money fa-5x"></i>
               <h2>First Feature</h2>
@@ -149,7 +149,7 @@
             </div>
   				</div>
 
-  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
               <i class="fa fa-play-circle-o fa-5x"></i>
               <h2>Second Feature</h2>
@@ -157,7 +157,7 @@
             </div>
   				</div>
 
-  				<div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+  				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
               <i class="fa fa-eye fa-5x"></i>
               <h2>Third Feature</h2>
@@ -165,7 +165,7 @@
             </div>
   				</div>
 
-          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <div class="text-wrap">
               <i class="fa fa-clock-o fa-5x"></i>
               <h2>Four Feature</h2>
@@ -173,7 +173,7 @@
             </div>
           </div>
 
-          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
            <div class="text-wrap">
               <i class="fa fa-road fa-5x"></i>
              <h2>Five Feature</h2>
@@ -181,7 +181,7 @@
            </div>
           </div>
 
-          <div class="col s12 m6 l4  myAnimation fadeInUp" data-wow-duration="2s">
+          <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
            <div class="text-wrap">
               <i class="fa fa-umbrella fa-5x"></i>
              <h2>Six Feature</h2>
