--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
   			</div> <!-- End row -->
   	 </div> <!-- End container -->
-    </section> <!-- End App Info -->
+    </section> <!-- End Job Info -->
 
   	<section class="features">
   		<div class="container">
@@ -201,7 +201,7 @@
      <section class="company-block">
        <div class="container">
           <h2 class="center">Work with great companies</h2>
-          <div id="work-carousel">
+          <div id="company-carousel">
            <div class="item"><img src="images/aramark-logo.jpg" alt="aramark"></div>
            <div class="item"><img src="images/skanska-logo.jpg" alt="skanska"></div>
            <div class="item"><img src="images/battersea-logo.jpg" alt="battersea"></div>
@@ -210,7 +210,7 @@
            <div class="item"><img src="images/mcalpine-logo.jpg" alt="Image"></div>
           </div>
        </div>
-     </section>
+     </section> <!-- End Company Block -->
 
     <footer id="footer">
       <div class="container myAnimation fadeInUp" data-wow-duration="2s">
@@ -253,7 +253,7 @@
         <div class="container myAnimation fadeInUp" data-wow-duration="2s">
           <p class="center"> Copyright &copy; 2016 By Olive Media</p>
         </div>
-      </div>
+      </div> <!-- End Footer Bottom -->
     </footer> <!-- End Footer -->
   </div> <!-- End Wrapper -->
 
