changing in nav styles and icon

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 		    <ul class="right hide-on-med-and-down">
 					<li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
 		      <li><a href="#download-app" class="waves-effect waves-yellow btn">Download</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Employers</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn"><i class="material-icons icon">location_city</i>For Employers</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
   		    <li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
 		      <li><a href="#download-app" class="waves-effect waves-yellow btn">Download</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Employers</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn"><i class="material-icons icon">location_city</i>For Employers</a></li>
 		    </ul>
 		  </div>
 		</nav> <!-- End nav -->
