--- a/employers.html
+++ b/employers.html
@@ -27,12 +27,12 @@
 		    <ul class="right hide-on-med-and-down">
 					<li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
 		      <li><a href="#download-app" class="waves-effect waves-yellow btn">About Us</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Jobseeker</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn"><i class="material-icons icon">people</i>For Jobseeker</a></li>
 		    </ul>
 		    <ul class="side-nav" id="mobile-demo">
   		    <li><a href="#login-web-app" class="waves-effect waves-yellow btn">Login</a></li>
 		      <li><a href="#download-app" class="waves-effect waves-yellow btn">About Us</a></li>
-		      <li><a href="#!" class="waves-effect waves-yellow btn">For Jobseeker</a></li>
+		      <li><a href="#!" class="waves-effect waves-yellow btn"><i class="material-icons icon">people</i>For Jobseeker</a></li>
 		    </ul>
 		  </div> <!-- End Nav Wrapper -->
 		</nav> <!-- End nav -->
@@ -235,9 +235,9 @@
       </div> <!-- End container -->
     </section> <!-- End Work Block -->
 
-    <section class="testimonials-block myAnimation fadeInUp" data-wow-duration="2s">
+    <section class="testimonials-block">
       <div class="container">
-        <h1 class="title center">What Our Clients Says</h1>
+        <h1 class="title center myAnimation fadeInUp" data-wow-duration="2s">What Our Clients Says</h1>
         <div class="row">
           <div class="col s12 m8 offset-m2 myAnimation fadeInUp" data-wow-duration="2s">
             <div id="testimonials-carousel">
