video player done

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">notifications_active</i>
             <h2>Get Notifications</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+            <p>Receive notification of a job that match your profile as soon as job is posted.</p>
           </div>
 
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <i class="large material-icons">touch_app</i>
             <h2>Apply</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</p>
+            <p>Apply with your profile, certificates and documents in cloud. Update your profile during the application process.</p>
           </div>
 
           <div class="col s12 m6 l4 myAnimation fadeInUp sameHeight" data-wow-duration="2s">
@@ -112,7 +112,7 @@
             <img src="images/feature-img01.png" alt="feature" class="myAnimation slideInRight" data-wow-duration="2s">
           </div>
   				<div class="col l6 myAnimation fadeInUp" data-wow-duration="2s">
-  					<h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
+  					<h2>Use on any devices.</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   				</div>
@@ -123,7 +123,7 @@
   					<img src="images/feature-img02.png" alt="feature" class="myAnimation slideInLeft" data-wow-duration="2s">
   				</div>
   				<div class="col l6  myAnimation fadeInUp" data-wow-duration="2s">
-  					<h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
+  					<h2>Upskilling and certificate on the go.</h2>
   					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   				</div>
@@ -134,7 +134,7 @@
             <img src="images/feature-img01.png" alt="feature" class="myAnimation slideInRight" data-wow-duration="2s">
           </div>
           <div class="col l6 myAnimation fadeInUp" data-wow-duration="2s">
-            <h2>Lorem ipsum dolor sit amet, consectetur elit, sed do tempor incididunt dolore.</h2>
+            <h2>Get a continuous notification on your application status.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequ ahdsd</p>
           </div>
@@ -186,17 +186,23 @@
       </div> <!-- End container -->
     </section> <!-- End Download App -->
 
-    <section class="login-web-app parallax" data-speed="0.4" id="login-web-app">
-      <div class="container myAnimation fadeInUp" ata-wow-duration="2s">
-        <div class="center">
-          <h2>No Mobile Device? No Problem?</h2>
-          <h3>
-            <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
-            To Our Web App
-          </h3>
+    <!--Video Section kogin web app-->
+    <section class="content-section video-section login-web-app" id="login-web-app">
+      <div class="pattern-overlay">
+      <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=P7odHDDjcpc',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+        <div class="container myAnimation fadeInUp" ata-wow-duration="2s">
+          <div class="center">
+              <h2>No Mobile Device? No Problem?</h2>
+              <h3>
+                <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
+                To Our Web App
+              </h3>
+            </div>
+          </div>
         </div>
       </div>
-    </section> <!-- End login Web App -->
+    </section>
+    <!--Video Section Ends Here-->
 
      <section class="company-block">
        <div class="container">
@@ -265,6 +271,7 @@
 	<script src="js/jquery.simpleparallax.min.js"></script>
 	<script src="js/wow.min.js"></script>
   <script src="js/jquery.matchHeight.min.js"></script>
+  <script src="js/jquery.mb.YTPlayer.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
