--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       </div> <!-- End container -->
     </section> <!-- End Download App -->
 
-    <!--Video Section kogin web app-->
+    <!--Video Section Login Web App-->
     <section class="content-section video-section login-web-app" id="login-web-app">
       <div class="pattern-overlay">
       <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=P7odHDDjcpc',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
@@ -202,7 +202,7 @@
         </div>
       </div>
     </section>
-    <!--Video Section Ends Here-->
+    <!--Video Section login Web App Ends Here-->
 
      <section class="company-block">
        <div class="container">
