--- a/employers.html
+++ b/employers.html
@@ -54,82 +54,27 @@
         <h1 class="title center">Recruiters Using Hiup</h1>
         <div id="recruters" class="owl-carousel">
           <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <img class="lazyOwl" data-src="images/aramark-logo.jpg" alt="aramark">
             <p class="company">Company</p>
             <p class="country">Country</p>
           </div>
           <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <img class="lazyOwl" data-src="images/skanska-logo.jpg" alt="skanska">
             <p class="company">Company</p>
             <p class="country">Country</p>
           </div>
           <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <img class="lazyOwl" data-src="images/battersea-logo.jpg" alt="battersea">
             <p class="company">Company</p>
             <p class="country">Country</p>
           </div>
           <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <img class="lazyOwl" data-src="images/balfour_beatty-logo.jpg" alt="balfourbeatty">
             <p class="company">Company</p>
             <p class="country">Country</p>
           </div>
           <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
-            <p class="company">Company</p>
-            <p class="country">Country</p>
-          </div>
-          <div class="item">
-            <img class="lazyOwl" data-src="images/bg-img.jpg" alt="Lazy Owl Image">
+            <img class="lazyOwl" data-src="images/knight_harwood.jpg" alt="knight harwood">
             <p class="company">Company</p>
             <p class="country">Country</p>
           </div>
@@ -143,7 +88,7 @@
           <h1 class="title">What we provide</h1>
   				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
-              <i class="fa fa-money fa-5x"></i>
+              <img src="images/bg-img.jpg" alt="">
               <h2>First Feature</h2>
               <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
             </div>
@@ -151,7 +96,7 @@
 
   				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
-              <i class="fa fa-play-circle-o fa-5x"></i>
+              <img src="images/bg-img.jpg" alt="">
               <h2>Second Feature</h2>
               <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
             </div>
@@ -159,7 +104,7 @@
 
   				<div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
   					<div class="text-wrap">
-              <i class="fa fa-eye fa-5x"></i>
+              <img src="images/bg-img.jpg" alt="">
               <h2>Third Feature</h2>
               <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
             </div>
@@ -167,7 +112,7 @@
 
           <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
             <div class="text-wrap">
-              <i class="fa fa-clock-o fa-5x"></i>
+              <img src="images/bg-img.jpg" alt="">
               <h2>Four Feature</h2>
               <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
             </div>
@@ -175,17 +120,17 @@
 
           <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
            <div class="text-wrap">
-              <i class="fa fa-road fa-5x"></i>
-             <h2>Five Feature</h2>
-             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+              <img src="images/bg-img.jpg" alt="">
+              <h2>Five Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
            </div>
           </div>
 
           <div class="col s12 m6 l4  myAnimation fadeInUp sameHeight" data-wow-duration="2s">
            <div class="text-wrap">
-              <i class="fa fa-umbrella fa-5x"></i>
-             <h2>Six Feature</h2>
-             <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
+              <img src="images/bg-img.jpg" alt="">
+              <h2>Six Feature</h2>
+              <p>Lorem ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit, sed do tempor incididunt dolore ipsum dolor sit amet, sed do tempor incididunt dolorem, consectetur elit.</p>
            </div>
           </div>
   			</div> <!-- End row -->
