--- a/index.html
+++ b/index.html
@@ -189,15 +189,23 @@
     <!--Video Section Login Web App-->
     <section class="content-section video-section login-web-app" id="login-web-app">
       <div class="pattern-overlay">
-      <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=P7odHDDjcpc',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+        <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=P7odHDDjcpc',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
         <div class="container myAnimation fadeInUp" ata-wow-duration="2s">
           <div class="center">
-              <h2>No Mobile Device? No Problem?</h2>
-              <h3>
-                <a href="#!" class="btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
-                To Our Web App
-              </h3>
+            <!-- Modal Trigger -->
+            <a class="waves-effect waves-light btn modal-trigger hiho-video" href="#modal1"><i class="fa fa-play-circle-o"></i></a>
+            <!-- Modal Structure -->
+            <div id="modal1" class="modal">
+              <div class="modal-content">
+                <iframe src="https://www.youtube.com/embed/P7odHDDjcpc" frameborder="0" allowfullscreen></iframe>
+              </div>
             </div>
+
+            <h2>No Mobile Device? No Problem?</h2>
+            <h3>
+              <a href="#!" class="login btn waves-effect waves-yellow myAnimation slideInLeft" data-wow-duration="2s"><i class="fa fa-sign-in"></i>LogIn</a>
+              To Our Web App
+            </h3>
           </div>
         </div>
       </div>
@@ -212,8 +220,8 @@
            <div class="item"><img src="images/skanska-logo.jpg" alt="skanska"></div>
            <div class="item"><img src="images/battersea-logo.jpg" alt="battersea"></div>
            <div class="item"><img src="images/balfour_beatty-logo.jpg" alt="balfourbeatty"></div>
-           <div class="item"><img src="images/knight_harwood.jpg" alt="Image"></div>
-           <div class="item"><img src="images/mcalpine-logo.jpg" alt="Image"></div>
+           <div class="item"><img src="images/knight_harwood.jpg" alt="knight harwood"></div>
+           <div class="item"><img src="images/mcalpine-logo.jpg" alt="mcalpine"></div>
           </div>
        </div>
      </section> <!-- End Company Block -->
